# Word-MCP

./: .env  .gitignore  Dockerfile  Exampleword.docx  README.md  Tester.docx  Tester2.docx  mcp-config.json  pyproject.toml  test_download.py  test_end_to_end.py  test_load_example.py
tests/: test_convert_to_pdf.py
word_document_server/: main.py
word_document_server/tools/: __init__.py  content_tools.py  document_tools.py
word_document_server/utils/: s3_utils.py
